--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,25 +7,32 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./student_age.json:/data/student_age.json
+      - ./simple_api/student_age.json:/data/student_age.json
     networks:
       - mynet
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/pozos/api/v1.0/get_student_ages"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    environment:
+      - USERNAME=toto
+      - PASSWORD=python
 
   website:
     image: php:apache
     depends_on:
-      API:
-        condition: service_healthy 
+      -  API
     ports:
       - "8080:80"
     volumes:
       - "./website:/var/www/html"
     networks:
       - mynet
+    environment:
+      - USERNAME=toto
+      - PASSWORD=python
 
-
-volumes:
-  website:
 
 networks:
   mynet:
